Update model/, views/, swagger.yml. Добавлен фоновый процесс, который отменяет неоплаченные заказы.
